--- a/KGGaming/KGGaming.csproj
+++ b/KGGaming/KGGaming.csproj
@@ -160,6 +160,7 @@
     <Resource Include="Images\Settings.png" />
     <Resource Include="Images\Logout.png" />
     <Resource Include="Images\Exit.ico" />
+    <Resource Include="Images\PayNow.png" />
     <Content Include="LoginData.mdf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
